--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -28,6 +29,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
@@ -36,4 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'com.chaos.view:pinview:1.4.4'
+    implementation "androidx.browser:browser:1.2.0"
 }
