--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pgDetails"></activity>
-        <activity android:name=".otp_page"></activity>
-        <activity android:name=".HomePage"></activity>
-
-        <activity
-            android:name=".Loginpage"
-            android:windowSoftInputMode="adjustResize">
+        <activity android:name=".profile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".pgDetails" />
+        <activity android:name=".otp_page" />
+        <activity android:name=".HomePage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Loginpage"
+            android:windowSoftInputMode="adjustResize"></activity>
     </application>
 
 </manifest>
