--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.xenecompany.xene"
         minSdkVersion 21
@@ -41,4 +46,5 @@ dependencies {
     implementation "androidx.browser:browser:1.2.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    compile 'com.makeramen:roundedimageview:2.3.0'
 }
