--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".wishlist" />
-        <activity android:name=".profile"
-            android:windowSoftInputMode="adjustPan">
+        <activity android:name=".wishlist"/>
+        <activity android:name=".profile"/>
+        <activity android:name=".pgDetails"/>
+        <activity android:name=".otp_page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".pgDetails">
-
-        </activity>
-        <activity android:name=".otp_page" />
-        <activity android:name=".HomePage">
-        </activity>
-        <activity
-            android:name=".Loginpage"
-            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".HomePage"/>
+        <activity android:name=".Loginpage"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
