--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         <activity android:name=".wishlist"/>
         <activity android:name=".profile"/>
         <activity android:name=".pgDetails"/>
-        <activity android:name=".otp_page">
+        <activity android:name=".otp_page"/>
+        <activity android:name=".HomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomePage"/>
         <activity android:name=".Loginpage"
             android:windowSoftInputMode="adjustResize"/>
     </application>
