--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'androidx.paging:paging-runtime:2.1.2'
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-firestore'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 }
