--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xenecompany.xene">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,18 +10,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".wishlist"/>
-        <activity android:name=".profile"/>
-        <activity android:name=".pgDetails"/>
-        <activity android:name=".otp_page"/>
-        <activity android:name=".HomePage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".wishlist" />
+        <activity android:name=".profile"
+            android:windowSoftInputMode="adjustPan">
+
         </activity>
-        <activity android:name=".Loginpage"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".pgDetails">
+
+        </activity>
+        <activity android:name=".otp_page" />
+        <activity android:name=".HomePage">
+        </activity>
+        <activity
+            android:name=".Loginpage"
+            android:windowSoftInputMode="adjustResize">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
