--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,15 @@
         </activity>
         <activity android:name=".contact_us"
             android:windowSoftInputMode="adjustPan">
+
+        </activity>
+        <activity android:name=".faq">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".faq"/>
     </application>
 
 </manifest>
