--- a/xiniStudent/src/main/AndroidManifest.xml
+++ b/xiniStudent/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,18 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".search"></activity>
+        <activity android:name=".search_page"/>
+        <activity android:name=".search" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity android:name=".wishlist" />
         <activity
             android:name=".profile"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".pgDetails"></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".pgDetails" />
         <activity android:name=".otp_page" />
-        <activity android:name=".HomePage">
-        </activity>
+        <activity android:name=".HomePage"/>
         <activity
             android:name=".Loginpage"
             android:windowSoftInputMode="adjustResize">
@@ -33,14 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".contact_us"
-            android:windowSoftInputMode="adjustPan">
-
-        </activity>
-        <activity android:name=".faq">
-        </activity>
-        <activity android:name=".About_Us"></activity>
-        <activity android:name=".my_deals"></activity>
+        <activity
+            android:name=".contact_us"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".faq"/>
+        <activity android:name=".About_Us" />
+        <activity android:name=".my_deals" />
     </application>
 
 </manifest>
