--- a/xinihostel/src/main/AndroidManifest.xml
+++ b/xinihostel/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".splash_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -30,11 +32,7 @@
         <activity
             android:name=".Loginpage"
             android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
@@ -44,15 +42,17 @@
         <activity
             android:name=".profile"
             android:windowSoftInputMode="adjustPan">
-            <service
-                android:name=".NotificationFireBaseMessagingService">
-                <intent-filter>
-                    <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-                </intent-filter>
-            </service>
-        </activity>
-        <activity android:name=".studentDetails"></activity>
 
+        </activity>
+        <activity android:name=".studentDetails">
+
+        </activity>
+        <service
+            android:name=".NotificationFireBaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
