--- a/xinihostel/build.gradle
+++ b/xinihostel/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.airbnb.android:lottie:3.4.2'
 }
