--- a/xiniStudent/src/main/AndroidManifest.xml
+++ b/xiniStudent/src/main/AndroidManifest.xml
@@ -12,31 +12,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".search"></activity>
+        <activity android:name=".search"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity android:name=".wishlist" />
         <activity
             android:name=".profile"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".pgDetails"></activity>
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".pgDetails"/>
         <activity android:name=".otp_page" />
         <activity android:name=".HomePage">
         </activity>
-        <activity android:name=".chatCardView"></activity>
+        <activity android:name=".chatCardView"/>
         <activity android:name=".chatAll" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
-        <activity android:name=".ChatPersonal">
+        <activity android:name=".ChatPersonal"/>
 
-        </activity>
-            android:name=".Loginpage"
+        <activity android:name=".Loginpage"
             android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".contact_us"
             android:windowSoftInputMode="adjustPan">
@@ -44,8 +43,8 @@
         </activity>
         <activity android:name=".faq">
         </activity>
-        <activity android:name=".About_Us"></activity>
-        <activity android:name=".my_deals"></activity>
+        <activity android:name=".About_Us"/>
+        <activity android:name=".my_deals"/>
         <service
             android:name=".NotificationFireBaseMessagingService">
             <intent-filter>
